feat(backend): refactor data layer initialization and add new query endpoints
- Initialize boat_layer, entities_layer, and metadata_layer at API startup using singleton pattern
- Remove per-request layer creation via _get_layer() method for improved performance
- Add new GET /api/v1/queries/entities/{entity_type} endpoint for entity-specific data retrieval
- Update all query methods to use correct layer methods: get_missing_dates_from_a_newspaper(), read_raw_entities(), read_raw_data()
- Implement proper PySpark F.col() usage for all filter operations instead of SQL strings
- Fix audit endpoints: change /duplicates/records/{log_id} to /duplicates/records with query parameter
- Update docker-compose.yml to use consistent Delta Lake path: /app/delta_test/docker
- Add comprehensive documentation: README.md, CAMBIOS_BACKEND.txt, RESUMEN_FINAL.txt
- Add test scripts: test_api.sh for endpoint validation and start_backend.sh for initialization
- Update .gitignore to exclude demo/ directory
- Remove duplicate line from requirements.txt
- Add error handling with try/except blocks to all endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - DELTA_LAKE_PATH=/app/delta_lake
+      - DELTA_LAKE_PATH=/app/delta_test/docker
       - CONFIG_PATH=/app/config/delta_data_layer_config.json
       - PATH_TO_INGEST=/app/ingestion
     volumes:
       # Map the physical Delta Lake path from host to container
-      - ./delta_lake:/app/delta_lake
+      - ./delta_lake:/app/delta_test/docker
       # Map a config folder if you have one, or create it empty for now
       - ./data_layer_config:/app/config
       - ./ingestion_zone:/app/ingestion
