feat(ingest): add Redis-based file ingestion with pagination and real-time updates
- Add getIngestionFiles API endpoint with pagination support (status, user, page, page_size filters)
- Refactor ProcessDashboardView to read directly from Redis instead of local store
- Implement auto-refresh mechanism for real-time file status updates
- Update KnownEntitiesView YAML export to use characteristics structure with voices array
- Configure PySpark with Delta Lake dependencies in docker-compose environment
- Update delta data layer base path configuration for Docker environment
- Replace local upload store with Redis-backed data source for better scalability
- Add loading and refresh states for improved UX during data fetching

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - DELTA_LAKE_PATH=/app/delta_test/docker
       - CONFIG_PATH=/app/config/delta_data_layer_config.json
       - PATH_TO_INGEST=/app/ingestion
+      - PYSPARK_SUBMIT_ARGS=--packages io.delta:delta-spark_2.12:3.2.1 --conf spark.sql.extensions=io.delta.sql.DeltaSparkSessionExtension --conf spark.sql.catalog.spark_catalog=org.apache.spark.sql.delta.catalog.DeltaCatalog pyspark-shell
     volumes:
       # Map the physical Delta Lake path from host to container
       - ./delta_lake:/app/delta_test/docker
