--- a/data_layer_config/delta_data_layer_config.json
+++ b/data_layer_config/delta_data_layer_config.json
@@ -1,6 +1,6 @@
 {
   "protocol": "file://",
-  "base_path": "/app/delta_test/docker",
+  "base_path": "/app/delta_test/docker/docker",
   "app_name": "DataLakePortadaCuration_01",
   "project_data_name": "portada_project",
   "master": "local[*]",
