--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,13 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - DELTA_LAKE_PATH=/app/delta_test/docker
+      - DELTA_LAKE_PATH=/app/delta_lake
       - CONFIG_PATH=/app/config/delta_data_layer_config.json
       - PATH_TO_INGEST=/app/ingestion
       - PYSPARK_SUBMIT_ARGS=--packages io.delta:delta-spark_2.12:3.2.1 --conf spark.sql.extensions=io.delta.sql.DeltaSparkSessionExtension --conf spark.sql.catalog.spark_catalog=org.apache.spark.sql.delta.catalog.DeltaCatalog pyspark-shell
     volumes:
       # Map the physical Delta Lake path from host to container
-      - ./delta_lake:/app/delta_test/docker
+      - ./delta_lake:/app/delta_lake
       # Map a config folder if you have one, or create it empty for now
       - ./data_layer_config:/app/config
       - ./ingestion_zone:/app/ingestion
@@ -92,15 +92,10 @@ services:
       - ./dades_persistents:/opt/dagster/dagster_home
       - ./ingestion_zone:/app/ingestion
       - ./data_layer_config:/opt/dagster/app/data_layer_config
-      - ./delta_lake:/app/delta_test
+      - ./delta_lake:/app/delta_lake
     networks:
       - internal_net
 
 networks:
   internal_net:
     driver: bridge
-
-volumes:
-  ingestion_zone:
-  dades_persistents:
-  delta_lake:
