--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - "5173:80"
     environment:
-      - VITE_API_BASE_URL=http://api:8000/api/v1
+      - VITE_API_BASE_URL=http://localhost:8000/api/v1
     depends_on:
       - api
     networks:
