--- a/data_layer_config/delta_data_layer_config.json
+++ b/data_layer_config/delta_data_layer_config.json
@@ -4,8 +4,10 @@
   "app_name": "DataLakePortadaCuration_01",
   "project_data_name": "portada_project",
   "master": "local[*]",
-  "spark.sql.shuffle.partitions": "4",
+  "spark.sql.shuffle.partitions": "100",
+  "spark.sql.adaptive.enabled": "true",
   "spark.databricks.delta.schema.autoMerge.enabled": "true",
+  "spark.sql.adaptive.coalescePartitions.enabled": "true",
   "spark.sql.caseSensitive": "false",
   "spark.sql.storeAssignmentPolicy": "LEGACY",
   "spark.sql.parquet.mergeSchema": "true",
