chore: update gitignore and configure Docker for Spark user
- Add development local files to gitignore (docker-compose.dev.yml, dev scripts, DEV_README.md)
- Create Spark system user and group in Dockerfile with UID 185
- Set proper permissions for Spark home directory
- Update cache bust arguments for base and application dependencies
- Switch container runtime user from root to Spark for improved security
- Prevent accidental commits of local development configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@ demo/
 .vscode/
 .redis/
 .env
+
+# Archivos de desarrollo local (no subir a GitHub)
+docker-compose.dev.yml
+start_dev.sh
+stop_dev.sh
+logs_dev.sh
+rebuild_dev.sh
+dev_help.sh
+DEV_README.md
